<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="viewModel"
            type="com.pasotti.matteo.wikiheroes.view.ui.search.SeriesUIViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/black">


        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_item_in_character"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_detail_image"
            app:imageUrl="@{viewModel.urlImage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/spiderman_comic" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/product_sans_bold"
            android:maxLines="3"
            android:text="@{viewModel.item.title}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:transitionName="@string/transition_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            tools:text="Title" />

        <TextView
            android:id="@+id/startYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/start_year"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/title_detail"
            tools:text="Start Year :" />

        <TextView
            android:id="@+id/start_year_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans_italic"
            android:text="@{viewModel.startYearValue}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/startYearLabel"
            app:layout_constraintStart_toEndOf="@+id/startYearLabel"
            tools:text="2016" />

        <TextView
            android:id="@+id/endYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/end_year"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/startYearLabel"
            tools:text="End Year :" />

        <TextView
            android:id="@+id/end_year_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans_italic"
            android:text="@{viewModel.endYearValue}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/endYearLabel"
            app:layout_constraintStart_toEndOf="@+id/endYearLabel"
            tools:text="2016" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>