<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail"
            type="com.pasotti.matteo.wikiheroes.models.Detail" />

        <variable
            name="url"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent">


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <!-- IMAGE -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="160dp">

                <!-- app:imageUrl="@{detail.}" -->
                <ImageView
                    android:id="@+id/image_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_gallery_content_descriptor"
                    android:scaleType="fitXY"
                    android:transitionName="@string/transition_detail_image"
                    app:galleryImageUrl="@{url}"
                    tools:src="@drawable/margeto" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_clock_24dp"
            android:elevation="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/card" />

        <TextView
            android:id="@+id/title_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/product_sans_bold"
            android:maxLines="2"
            android:text="@{detail.title}"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:transitionName="@string/transition_detail_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            tools:text="Spiderman" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>