<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.pasotti.matteo.wikiheroes.utils.CustomScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <!-- IMAGE AND NAME -->
                <ImageView
                    android:id="@+id/imageCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_character_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@drawable/ironman" />


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_character_title_detail"
                    android:gravity="center_vertical"
                    android:paddingBottom="20dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/product_sans_bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageCharacter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Iron Man"
                    android:transitionName="@string/transition_character_name"/>


            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/characterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:text="@string/lorem"
                    android:text="@string/lorem"/>



            </android.support.constraint.ConstraintLayout>




        </LinearLayout>


    </com.pasotti.matteo.wikiheroes.utils.CustomScrollView>

</layout>