<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pasotti.matteo.wikiheroes.view.ui.home.comics.HomeComicUIViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/black">


        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_item_in_character"
            android:scaleType="centerCrop"
            tools:src="@drawable/spiderman_comic"
            android:transitionName="@string/transition_detail_image"
            app:imageUrl="@{viewModel.urlImage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/product_sans_bold"
            android:maxLines="3"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@{viewModel.title}"
            android:transitionName="@string/transition_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            tools:text="Title" />

        <TextView
            android:id="@+id/publishedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="Published:"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="@{viewModel.publishedDateVisibility}"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/title_detail"
            tools:text="Published:" />

        <TextView
            android:id="@+id/published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans_italic"
            android:text="@{viewModel.publishDate}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="@{viewModel.publishedDateVisibility}"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/publishedLabel"
            tools:text="28/12/1992" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/product_sans_italic"
            android:text="@{viewModel.price}"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.priceVisibility}"
            app:layout_constraintBaseline_toBaselineOf="@+id/published_date"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="£2.95" />

        <TextView
            android:id="@+id/pagesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="Pages:"
            android:visibility="@{viewModel.numberPagesVisibility}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/published_date"
            tools:text="Pages:" />

        <TextView
            android:id="@+id/pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/product_sans_italic"
            android:text="@{viewModel.numberPages}"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.numberPagesVisibility}"
            app:layout_constraintStart_toEndOf="@+id/pagesLabel"
            app:layout_constraintBaseline_toBaselineOf="@+id/pagesLabel"
            tools:text="100" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>